--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
   ],
   "repositories": [
     {
-        "type": "vcs",
-        "url": "https://github.com/xama5/kantan-lib"
+        "type": "git",
+        "url": "https://github.com/xama5/kantan-lib.git"
     }
   ],
   "extra": {
@@ -50,10 +50,7 @@
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.9",
     "soberwp/controller": "~2.1.0",
-    "primetime/wp-plugin-activation-manifest": "^1.0"
-  },
-  "require-dev": {
-    "squizlabs/php_codesniffer": "^2.8.0",
-    "roots/sage-installer": "~1.6"
+    "primetime/wp-plugin-activation-manifest": "^1.0",
+    "xama5/kantan-lib": "^1.0"
   }
 }
